# terraform-mcp-server-python

./: README.md  main.py  pyproject.toml
src/terraform_mcp_server/: config.py  registry.py  server.py  tfe.py  utils.py
src/terraform_mcp_server/tools/: registry_tools.py  tfe_tools.py
